# openclaw-secure-stack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  build.sh  docker-compose.yml  install.sh  pyproject.toml
.spec/steering/: product.md  structure.md  tech.md
config/: egress-allowlist.conf  execution-plan.json  governance-policies.json  indirect-injection-rules.json  intent-patterns.json  prompt-rules.json  scanner-rules.json
deploy/hybrid/: README.md  docker-compose.hybrid.yml  install-hybrid.sh
deploy/native/: .verification-checklist.md  COMPARISON.md  Caddyfile.domain  Caddyfile.localhost  DEPLOYMENT.md  README.md  caddy.service  health-check.sh  install-native.sh  openclaw-backup.sh  openclaw-proxy.service  openclaw.env.template  openclaw.service  proxy.env.template  uninstall.sh
docker/caddy/: Caddyfile
docker/egress/: Corefile  Dockerfile  entrypoint.sh  generate-zone.sh
docs/: openclaw-cloudflare-tunnel-setup.md  openclaw-quick-reference.md  quickstart-dev.md  quickstart-user.md  telegram-webhook-setup.md
docs/reference/: execution-plan-reference.json
plugins/prompt-guard/: index.ts  openclaw.plugin.json  package-lock.json  package.json  vitest.config.ts
schemas/execution-plan/: README.md
scripts/: audit.py
src/: models.py
src/audit/: logger.py
src/execution/: __init__.py  engine.py  executor.py  injected_context.py
src/governance/: __init__.py  approver.py  classifier.py  db.py  enforcer.py  local_context.py  middleware.py  models.py  planner.py  session.py  store.py  (+1 more)
tests/: conftest.py
(+88 files in other folders)
